# core-Components

./: Component_Base.props  Component_Base.vsprops  Component_Win32_Beta.props  Component_Win32_Beta.vsprops  Component_Win32_Debug.props  Component_Win32_Debug.vsprops  Component_Win32_Release.props  Component_Win32_Release.vsprops  Component_Win64_Beta.props  Component_Win64_Beta.vsprops  Component_Win64_Debug.props  Component_Win64_Debug.vsprops  Component_Win64_Release.props  Component_Win64_Release.vsprops  components.xcconfig  components_base.xcconfig  components_beta.xcconfig  components_coverage.xcconfig  components_debug.xcconfig  components_performance.xcconfig  components_release.xcconfig
Code Editor/: CodeEditorDocuments.h
DB4D/Documentation/: journal_file_format.txt  replication_format.txt  requests.txt
DB4D/Headers/: DB4D.h  DB4DBagKeys.h  DataService.h
DB4D/Resources/: ImpExpRest.js  ModelLoadTime.js  ModelPrepare.js  RemoteMethodCall.js  directoryRest.js  reporting.js
DB4D/Resources/cs.lproj/: BACKUPRESTORECS.xlf  DB4DCS.xlf
DB4D/Resources/de.lproj/: BACKUPRESTOREDE.xlf  DB4DDE.xlf
DB4D/Resources/en.lproj/: BACKUPRESTOREEN.xlf  DB4DEN.xlf
DB4D/Resources/es.lproj/: BACKUPRESTOREES.xlf  DB4DES.xlf
DB4D/Resources/fr.lproj/: BACKUPRESTOREFR.xlf  DB4DFR.xlf
DB4D/Resources/ja.lproj/: BACKUPRESTOREJA.xlf  DB4DJA.xlf
DB4D/Resources/pt-BR.lproj/: BACKUPRESTOREPT-BR.xlf  DB4DPT-BR.xlf
DB4D/Sources/: 4DDBHeaders.h  4DDBHeadersPCH.cpp  Backup.cpp  Backup.h  Base4D.cpp  Base4D.h  BitTable.cpp  BitTable.h  Blob4D.cpp  Blob4D.h  Cache.cpp  Cache.h  CheckAndRepair.cpp  CheckAndRepair.h  CodeReg.cpp  CodeReg.h  ComponentStub.cpp  Cron.cpp  Cron.h  DB4DComponent.cpp  DB4DComponent.h  DB4DInfoCollectors.cpp  DB4DInfoCollectors.h  DB4DMgr.cpp  DB4DMgr.h  DataSeg.cpp  DataSeg.h  DataSource.cpp  EMQuery.cpp  EMQuery.h  EntityModel.cpp  EntityModel.h  Err4D.h  Errors.xml  Export.cpp  Export.h  Fiche.cpp  Fiche.h  Fichier.cpp  Fichier.h  (+60 more)
DB4D/projects/CMake/: CMakeLists.txt
DB4D/projects/Xcode/: DB4D_Prefix.pch  Info.plist
DB4D/projects/win/: DB4D-VS9.vcproj  DB4D-VS9.vcxproj  DB4D-VS9.vcxproj.filters  DB4D.vcxproj  DB4D.vcxproj.filters  DB4D.vcxproj.vspscc
HTTPServer/: SampleRequest.txt
HTTPServer/Documentation/: HTTPServer_ActivityDiagram.dia  Shema_HTTPServer.odg
HTTPServer/Headers/: HTTPErrors.h  HTTPNetworking.h  HTTPProtocol.h  HTTPPublicTypes.h  HTTPServer.h  HTTPServerCache.h  HTTPServerLog.h  HTTPServerSettings.h  HTTPServerTools.h  NameValueCollection.h  VAuthenticationManager.h  VAuthenticationReferee.h  VDebugInfosHTTPRequestHandler.h  VHTMLForm.h  VHTTPConnectionHandler.h  VHTTPConnectionHandlerFactory.h  VHTTPConnectionListener.h  VHTTPCookie.h  VHTTPError.h  VHTTPHeader.h  VHTTPMessage.h  VHTTPRequest.h  VHTTPResource.h  VHTTPResponse.h  VHTTPServer.h  VHTTPServerComponentLibrary.h  VHTTPServerProject.h  VHTTPServerSession.h  VHTTPWebsocketHandler.h  VMimeType.h  VNonce.h  VStaticPagesHTTPRequestHandler.h  VTCPServer.h  VVirtualFolder.h  VVirtualHost.h  VVirtualHostManager.h
HTTPServer/Interfaces/: CHTTPServer.h
HTTPServer/Projects/CMake/: CMakeLists.txt
HTTPServer/Resources/: Error_Template.html  MimeTypes.xml
HTTPServer/Sources/: HTTPNetworking.cpp  HTTPProtocol.cpp  HTTPServerCache.cpp  HTTPServerLog.cpp  HTTPServerPCH.cpp  HTTPServerSettings.cpp  HTTPServerTools.cpp  NameValueCollection.cpp  VAuthenticationManager.cpp  VAuthenticationReferee.cpp  VDebugInfosHTTPRequestHandler.cpp  VHTMLForm.cpp  VHTTPConnectionHandler.cpp  VHTTPConnectionHandlerFactory.cpp  VHTTPConnectionListener.cpp  VHTTPCookie.cpp  VHTTPError.cpp  VHTTPHeader.cpp  VHTTPMessage.cpp  VHTTPRequest.cpp  VHTTPResource.cpp  VHTTPResponse.cpp  VHTTPServer.cpp  VHTTPServerComponentLibrary.cpp  VHTTPServerProject.cpp  VHTTPServerSession.cpp  VHTTPWebsocketHandler.cpp  VMimeType.cpp  VNonce.cpp  VStaticPagesHTTPRequestHandler.cpp  VTCPServer.cpp  VVirtualFolder.cpp  VVirtualHost.cpp  VVirtualHostManager.cpp
Language Syntax/: CLanguageSyntax.h  LanguageSyntaxBagKeys.h
Language Syntax/Documentation/: JavaScriptSyntaxEngine.rtf  SQLSyntaxEngine.rtf
Language Syntax/Lex Files/: GNU Tools rules.props  GNU Tools rules.rules  GNU Tools rules.targets  how to generate files.txt  html.lex  html.lexer.c  php.lex  php.lexer.c  processing lex files-VS9.vcproj  processing lex files-VS9.vcxproj  processing lex files.vcxproj  processing lex files.vcxproj.filters  xml.lex  xml.lexer.c
Language Syntax/Projects/CMake/: CMakeLists.txt
Language Syntax/Sources/: CSSSyntax.cpp  CSSSyntax.h  ComponentStub.cpp  HTMLLexer.cpp  HTMLLexer.h  HTMLParser.cpp  HTMLParser.h  HTMLSyntax.cpp  HTMLSyntax.h  JavaScriptAST.cpp  JavaScriptAST.h  JavaScriptLexer.cpp  JavaScriptLexer.h  JavaScriptParser.cpp  JavaScriptParser.h  JavaScriptSyntax.cpp  JavaScriptSyntax.h  LanguageSyntax.cpp  LanguageSyntax.h  LanguageSyntaxComponent.cpp  LanguageSyntaxComponent.h  LanguageSyntaxHeaders.h  LanguageSyntaxPCH.cpp  PHPSyntax.cpp  PHPSyntax.h  PHPSyntaxData.cpp  SQLSyntax.cpp  SQLSyntax.h  ScriptDoc.cpp  ScriptDoc.h  SymbolTable.cpp  SymbolTable.h  XMLSyntax.cpp  XMLSyntax.h  html.lexer.c  html.lexer.h  php.lexer.c  php.lexer.h  xml.lexer.c  xml.lexer.h
Security Manager/Headers/: SecurityManager.h  TemplateComponent.h
Security Manager/Interfaces/: CSecurityManager.h
Security Manager/Projects/CMake/: CMakeLists.txt
Security Manager/Sources/: SecurityManager.cpp  Template.cpp
Security Manager/Tests/: DemoDirectory.xml
UsersAndGroups/Resources/: importUAG.js  methodCall.js  uag.waModel
UsersAndGroups/Sources/: Groups.cpp  Groups.h  JsUAG.cpp  JsUAG.h  UAG.cpp  UAG.h  UAGHeaders.h  UAGHeadersPCH.cpp  Users.cpp  Users.h  UsersAndGroups.h  Utils.cpp  Utils.h
UsersAndGroups/Templates/: db.xml
UsersAndGroups/projects/CMake/: CMakeLists.txt
UsersAndGroups/projects/XCode/: Info.plist
Zip/Headers/: VZipComponent.h  ZipComponent.h  ZipErrorClasses.h  ZipErrors.h
Zip/Interfaces/: CZipComponent.h
Zip/Projects/CMake/: CMakeLists.txt
Zip/Sources/: VZipComponent.cpp  ZipComponentPCH.cpp  ZipErrors.cpp
(+53 files in other folders)
